--- a/lgfischer/style.css
+++ b/lgfischer/style.css
@@ -72,7 +72,6 @@ table {
 	font-family: Brawler;
 	src: url('font-brawler/Brawler-Regular.ttf');
 }
-
 body {
 	background-color: #303030;
 	background-image: url("px_by_Gre3g.png");
@@ -94,14 +93,20 @@ h1, h2, h3, h4, h5, h6 {
 a:hover {
 	text-decoration: underline;
 }
+pre, code {
+	font-family: monospace;
+	font-size: 15px;
+	white-space: pre;
+}
 pre {
 	border-radius: 3px;
 	display: block;
-	font-family: monospace;
-	font-size: 15px;
 	line-height: 1.2em;
 	margin: 1em 0px;
-	white-space: pre;
+}
+code {
+	border-radius: 3px;
+	background-color: #E8E8E8;
 }
 header {
 	font-size: 15px;
