--- a/lgfischer/style.css
+++ b/lgfischer/style.css
@@ -285,9 +285,22 @@ article .alert{
 	border-width: 1px;
 	padding: 0.6em 1em 0.6em 1em;
 }
-
 article h2 a, article h3 a {
 	color: inherit;
+	text-decoration: none;
+}
+a[rel=tag] {
+	border: 2px solid #BBB;
+	display: inline-block;
+	color: #222;
+	background-color: #EEE;
+	text-decoration: none;
+	padding: 2px 6px;
+	border-radius: 15px;
+	margin-left: 3px;
+}
+a[rel=tag]:hover {
+	border-color: #222;
 	text-decoration: none;
 }
 .comments {
