Updated TODOs, added <b> and <i> styles

--- a/lgfischer/style.css
+++ b/lgfischer/style.css
@@ -90,6 +90,12 @@ body {
 h1, h2, h3, h4, h5, h6 {
 	font-family: "Brawler", "Times";
 }
+i {
+	font-style: italic;
+}
+b {
+	font-weight: bold;
+}
 a:hover {
 	text-decoration: underline;
 }
